@@ -153,25 +153,19 @@ int main(int argc, char * argv[])
     int  i, j;                /*  generic counters */
     int  wLeft = 52;          /*  cards left to be chosen in shuffle */
     CARD deck[52];            /* deck of 52 unique cards */
-    int gamenumber;
     microsoft_rand_t * my_rand_gen;
     int print_ts = 0;
-    int arg;
 
-    if (argc == 1)
+    int arg = 1;
+    if (arg < argc)
     {
-        gamenumber = time(NULL);
-    }
-    else
-    {
-        arg = 1;
         if (!strcmp(argv[arg], "-t"))
         {
             print_ts = 1;
             arg++;
         }
-        gamenumber = atoi(argv[arg]);
     }
+    const int gamenumber = ((arg < argc) ? atoi(argv[arg++]) : time(NULL));
 
     /* shuffle cards */
 
